apps/base/error-pages/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: error-pages-error-pages@kubernetescrd
spec:
  defaultBackend:
    service:
      name: error-pages
      port:
        name: http
